Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,8 +1,8 @@
 .parallax-container {
     position: relative;
     height: 100vh;
-    transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
+    /*transform-style: preserve-3d;*/
+    /*-webkit-transform-style: preserve-3d;*/
 }
 
 .parallax-container::before {
@@ -13,7 +13,8 @@
     background-image: url("../assets/img/main-bg.png");
     background-position: top center;
     background-size: cover;
-    transform: translateZ(-100px) scale(2);
+    z-index: -1;
+    /*transform: translateZ(-100px) scale(2);*/
 }
 
 
@@ -22,7 +23,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    transform: translateZ(-50px) scale(1.5);
+    /*transform: translateZ(-50px) scale(1.5);*/
 }
 
 .truck > div {
